--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.16",
     "lucide-react": "^0.548.0",
+    "pdfjs-dist": "^5.4.296",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-dropzone": "^14.3.8",
+    "react-pdf": "^10.2.0",
     "recharts": "^3.3.0"
   },
   "devDependencies": {
