--- a/client/package.json
+++ b/client/package.json
@@ -10,13 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-oauth/google": "^0.12.2",
     "@tailwindcss/vite": "^4.1.16",
+    "axios": "^1.13.0",
     "lucide-react": "^0.548.0",
     "pdfjs-dist": "^5.4.296",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-dropzone": "^14.3.8",
     "react-pdf": "^10.2.0",
+    "react-router-dom": "^7.9.4",
     "recharts": "^3.3.0"
   },
   "devDependencies": {
