--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -20,6 +20,8 @@ requests-oauthlib==2.0.0
 social-auth-core==4.8.1
 sqlparse==0.5.3
 urllib3==2.5.0
+gunicorn
+dj-database-url
 PyPDF2==3.0.1
 google-generativeai==0.7.1
 python-dotenv==1.0.1
