--- a/client/package.json
+++ b/client/package.json
@@ -10,9 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@react-oauth/google": "^0.12.2",
+    "@capacitor/android": "^7.4.4",
+    "@capacitor/core": "^7.4.4",
+    "@capacitor/ios": "^7.4.4",
     "@tailwindcss/vite": "^4.1.16",
-    "axios": "^1.13.0",
+    "firebase": "^12.5.0",
     "lucide-react": "^0.548.0",
     "pdfjs-dist": "^5.4.296",
     "react": "^19.1.1",
@@ -23,6 +25,7 @@
     "recharts": "^3.3.0"
   },
   "devDependencies": {
+    "@capacitor/cli": "^7.4.4",
     "@eslint/js": "^9.36.0",
     "@tailwindcss/postcss": "^4.1.16",
     "@types/react": "^19.1.16",
