--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@capacitor/core": "^7.4.4",
     "@capacitor/ios": "^7.4.4",
     "@tailwindcss/vite": "^4.1.16",
+    "axios": "^1.13.2",
     "firebase": "^12.5.0",
     "lucide-react": "^0.548.0",
     "pdfjs-dist": "^5.4.394",
