--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,8 @@
     "@capacitor/android": "^7.4.4",
     "@capacitor/core": "^7.4.4",
     "@capacitor/ios": "^7.4.4",
+    "@capgo/capacitor-social-login": "^7.14.11",
+    "@react-oauth/google": "^0.12.2",
     "@tailwindcss/vite": "^4.1.16",
     "axios": "^1.13.2",
     "firebase": "^12.5.0",
@@ -21,6 +23,7 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-dropzone": "^14.3.8",
+    "react-google-button": "^0.8.0",
     "react-pdf": "^10.2.0",
     "react-router-dom": "^7.9.4",
     "recharts": "^3.3.0"
