--- a/client/android/app/capacitor.build.gradle
+++ b/client/android/app/capacitor.build.gradle
@@ -9,6 +9,7 @@ android {
 
 apply from: "../capacitor-cordova-android-plugins/cordova.variables.gradle"
 dependencies {
+    implementation project(':boengli-capacitor-fullscreen')
     implementation project(':capgo-capacitor-social-login')
 
 }
