--- a/client/android/capacitor.settings.gradle
+++ b/client/android/capacitor.settings.gradle
@@ -2,5 +2,8 @@
 include ':capacitor-android'
 project(':capacitor-android').projectDir = new File('../node_modules/@capacitor/android/capacitor')
 
+include ':boengli-capacitor-fullscreen'
+project(':boengli-capacitor-fullscreen').projectDir = new File('../node_modules/@boengli/capacitor-fullscreen/android')
+
 include ':capgo-capacitor-social-login'
 project(':capgo-capacitor-social-login').projectDir = new File('../node_modules/@capgo/capacitor-social-login/android')
