--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@boengli/capacitor-fullscreen": "^0.0.19",
     "@capacitor/android": "^7.4.4",
     "@capacitor/core": "^7.4.4",
     "@capacitor/ios": "^7.4.4",
@@ -17,10 +18,12 @@
     "@react-oauth/google": "^0.12.2",
     "@tailwindcss/vite": "^4.1.16",
     "axios": "^1.13.2",
+    "date-fns": "^4.1.0",
     "firebase": "^12.5.0",
     "lucide-react": "^0.548.0",
     "pdfjs-dist": "5.4.296",
     "react": "^19.1.1",
+    "react-datepicker": "^8.9.0",
     "react-dom": "^19.1.1",
     "react-dropzone": "^14.3.8",
     "react-google-button": "^0.8.0",
