--- a/client/package.json
+++ b/client/package.json
@@ -32,6 +32,7 @@
     "recharts": "^3.3.0"
   },
   "devDependencies": {
+    "@capacitor/assets": "^3.0.5",
     "@capacitor/cli": "^7.4.4",
     "@eslint/js": "^9.36.0",
     "@tailwindcss/postcss": "^4.1.16",
