Update env example

--- a/client/.env.example
+++ b/client/.env.example
@@ -7,6 +7,7 @@ VITE_FIREBASE_PROJECT_ID=your_project_id
 VITE_FIREBASE_STORAGE_BUCKET=your_project.appspot.com
 VITE_FIREBASE_MESSAGING_SENDER_ID=your_sender_id
 VITE_FIREBASE_APP_ID=your_app_id
+VITE_FIREBASE_MEASUREMENT_ID=your_app_measurement_id
 
 ## GitHub Configuration (for triggering historical data fetch)
 VITE_GITHUB_TOKEN=your_github_personal_access_token
@@ -14,4 +15,5 @@ VITE_GITHUB_REPO_OWNER=your_github_username
 VITE_GITHUB_REPO_NAME=Finance-Tracker
 
 ## Other APIs
-VITE_API_URL=http://localhost:8000
+VITE_API_BASE_URL=http://localhost:8000
+VITE_GOOGLE_CLIENT_ID=your_google_client_id
